- improved downloading of plugins from server
git-svn-id: https://svn2.assembla.com/svn/savant/Savant/trunk@1025 096565f4-0d05-4fcd-8cbf-ff6523290f6f